[package]
name = "knxkit_mqtt"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tracing-subscriber = "0.3"
anyhow = "1.0"
tracing = "0.1"
local-ip-address = "0.6"
clap = { version = "4.5", features = ["derive"] }
knxkit = { path = "../knxkit/knxkit" }
knxkit_dpt = { path = "../knxkit/knxkit_dpt" }
url = "2.5.4"
dns-lookup = "2.0.4"
rumqttc = "0.24.0"
serde_json = "1.0.134"
adaptive_backoff = "0.2.1"
serde = "1.0.216"
humantime = "2.1.0"

[[bin]]
name = "knx2mqtt"
path = "src/main.rs"
